--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
   <h1>Kit anti-prospection Freelance B2B</h1>
   <p>Attirez des leads sans cold calling ni DM intrusifs</p>
-  <a class="cta" href="REMPLACE-MOI-PAR-TON-LIEN-GUMROAD" target="_blank">Accéder — 19 € (Pro 39 €)</a>
+  <a class="cta" href="https://ouchama.gumroad.com/l/ejkee?_gl=1*ol1j48*_ga*NDg3MTI5MTk2LjE3NTc3OTAzMjM.*_ga_6LJN6D94N6*czE3NTc4MDYxMDIkbzIkZzAkdDE3NTc4MDYxMDIkajYwJGwwJGgw" target="_blank">Accéder — 19 € (Pro 39 €)</a>
 </header>
 <main>
   <h2>Ce que vous obtenez</h2>
